--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Nathaniel's Basic Portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body>
+    <!-- I don't know if I need this div -->
     <div class="wrapper">
-        
+        <!--this is where I have my little buttons in the header to link to the other pages on the site  -->
         <section id="top-bar">
 
                 <a class="nav" href="index.html">About</a> 
