index.html-6-style.css-3

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
         </section>
         
-        <section id="about-me">    
+        <section id="container">    
         
-            <h2 id="text-about-me">About Me</h2>
+            <h2 id="About-Me">About Me</h2>
 
                 <img id="casual-pic-1" src="assets/images/Photo on 9-26-18 at 7.35 PM.jpg" alt="Nathaniel Holdsworth" style="width:18.5em; height:12.5em">
 
                 <!-- this section is the paragraph about me -->
-                <p id=""> 
+                <p id="Paragraph1"> 
                     <!-- start slipsum code -->
 
                     My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?
