--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 
     <title>Nathaniel's Basic Portfolio</title>
 
+    <link rel="stylesheet" type="text/css" href="assets/css/css-reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -14,18 +15,22 @@
 <body>
     <!-- I don't know if I need this div -->
     <div class="not-sure-i-need-this">
-        <!--this section tag I am hoping will help me seperate the top portion from   -->
+        <!--this section tag I am hoping will help me seperate the top portion from the main page content   -->
         <section id="top-bar">
             <!-- these are the buttons to go to the different pages on my site -->
-            <div id="go-here"> 
+            <ul class="nav"> 
             
-                <a class="nav" href="index.html">About  |</a>
+                <li><a href="index.html">About</a></li>
 
-                <a class="nav" href="portfolio.html">Portfolio  |</a>
+                <li>|</li>
 
-                <a class="nav" href="contact.html">Contact</a>
+                <li><a href="portfolio.html">Portfolio</a></li>
 
-            </div>
+                <li>|</li>
+
+                <li><a href="contact.html">Contact</a></ll>
+
+            </ul>
             
             <header>
 
