--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
                 <li>|</li>
 
-                <li><a href="contact.html">Contact</a></ll>
+                <li><a href="contact.html">Contact</a></li>
 
-            </ul>
+            </ul class="nav">
             
             <header>
 
@@ -38,4 +38,5 @@
         
             </header>
 
-        </section>
+        </section id="top-bar">
+
