cleaning things up

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,9 @@
         </nav id="top-bar">
 
     </div>
-
+    <!-- this is my contact form div container  -->
     <section id="contact-contents">
-
+    <!--these are the divs that contains the label text and image so that they can be styles to have the same height and width  -->
         <div id="box1">
 
             <h2 id="portfolio">Portfolio</h2>
