--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
     </div>
 
-        <section id="contact-contents">
+        <section id="contact-box">
             
                 <div id="box1">
             
