small good change

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
     </div>
     <!-- this is my contact form div container  -->
-    <section id="contact-contents">
+    <section id="contact-box">
     <!--these are the divs that contains the label text and image so that they can be styles to have the same height and width  -->
         <div id="box1">
 
