--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
     </div>
     <!-- this is my contact form div container  -->
-    <section id="contact-box">
+    <section id="thumbnail-box">
     <!--these are the divs that contains the label text and image so that they can be styles to have the same height and width  -->
         <div id="box1">
 
@@ -54,7 +54,7 @@
         </div>
 
         <div class="thumbnail">
-
+            <!-- why do these break when I resize to 275/205? -->
             <img class="gallery-image" src="https://fillmurray.com/250/200">
 
              <p class="label">Label</p>
