--- a/index.html
+++ b/index.html
@@ -58,47 +58,52 @@
 
         <!-- this section is the paragraphs about me -->
         <p id="p1">
-            My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to
-            go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that
-            bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm
-            talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in
-            there, you the first motherfucker to get shot. You understand?
+           I am really excited about web development!  I am fascinated by the incredible
+           creative potential of programming.  Within the wires and circuitry of computers
+           we fashion new worlds unconstrained by the ordinary laws that govern the outside
+           world.  I grew up with electronics one might say.  Nintendo was a big part of my
+           childhood.  I was born in March 1983.  SUper-Mario was born that same June.
+
+        
         </p>
 
         <br>
 
         <p id="p2">
-            The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of
-            evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-            darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon
-            thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And
-            you will know My name is the Lord when I lay My vengeance upon thee.
+            I remember when Super-Mario 3 came out.  My dad was living in this apartment in Fresno.
+            I liked that apartment.  It had new clean but soon to be destroyed (by his 3 small children 
+            children and their trusty side-kick Justin) carpet.  And when we spilled birthday cake on the floor that
+            night and Eli knocked over his orange soda—the ants emerged numerous and single file; trudging
+            through an orange soda swamp towards birthday cake boulders obediently carrying their body weight in crumbs back to the queen.  
+            That is... until my father burst through the door, simple green in hand, "you motherfuckers" he cursed-
+            to the ants of course.  We stayed awake as long as we could and played Super-Mario 3 until 
+            pink clouds came peeking from the pale morning sky through the blinds into our empty apartment bedroom
+            where we sat laughing to each-other as we recounted to one another over and over again the hilarious scene
+            and repeated our father's oath upon the ants with tears of laughter in our eyes.    
         </p>
 
         <br>
 
         <p id="p3">
-            Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw
-            Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to
-            me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+            Mariah was the first of us to play Super Nintendo.  Eli and I had gone with our mom on a trip
+            to Baja.  Riah stayed behind.  What had happened was that Dad's house got broken into
+            and the TV and the Nintendo had gotten stolen.  Once dad got the insurance money, he got us 
+            a Super-Nintendo.  I remember talking to my sister on the phone and her telling me about it.
+            First she told me about the burglary and how they took the Nintendo.  I was horrified.  Then 
+            she told me that we got a Super-Nintendo, and I could hardly contain myself.  Super-Mario World 
+            still might be the best game ever created.   
         </p>
 
         <br>
 
         <p id="p4">
-            Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than
-            mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way
-            to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem,
-            we are connected, you and I. We're on the same curve, just on opposite ends.
+            <!-- Super Mario RPG came out in middle school -->
         </p>
 
         <br>
 
         <p id="p5">
-            Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show
-            to the people who make shows, and on the strength of that one show they decide if they're going to make
-            more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred
-            in one of the ones that became nothing.
+            <!-- Super Mario 64 came out in that house in madera. -->
         </p>
 
     </section>
